Mon Sep 29 11:59:31 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h commands.inc export.h gnubg.c gtkexport.c, gtkoptions.c
	gtkrolls.c html.c import.c makebearoff.c, makehyper.c play.c record.c
	rollout.c set.c show.c text.c, po/Makefile.in.in po/cs.po po/da.po
	po/de.po po/en_US.po, po/fr.po po/gnubg.pot po/is.po po/it.po po/ja.po
	po/ru.po, po/tr.po: completed the danish translation and updated a
	number of strings
	
Sat Sep 27 22:27:05 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* lib/Makefile.am, lib/neuralnet.c, lib/neuralnet.h,
	lib/neuralnetsse.c, lib/sigmoid.h: allow a small speedup by inlining
	the sigmoid function again.

Tue Sep 23 21:59:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkmovefilter.c, gtkrace.c, gtkrelational.c, gtkwindows.c,
	gtkwindows.h: remove GtkSignalFunc as it will be deprecated

Tue Sep 23 17:41:15 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* text.c: fix minor \n output bug

Tue Sep 23 17:29:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, render.c, pixmaps/Makefile.am: fix a few minor without
	gtk issues

Tue Sep 23 12:44:36 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkboard.c, gtkboard.h,
	gtkoptions.c, set.c: add option to disable boardgraying

Sun Sep 29 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* gtkboard.c, render.c: Attempt to gray board in edit mode

Mon Sep 15 21:20:28 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, pixmaps/Makefile.am: allow building even if
	gdk-pixbuf-csource is not found

Sun Sep 14 22:32:57 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* : update danish translation and adjust a few strings

Thu Sep  4 15:18:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtk-multiview.[ch]: port to g_object

Tue Sep  2 23:05:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkcolour.c, gtkcolour.h, gtkprefs.c, gtkprefs.h,
	board3d/gtkcolour3d.c, board3d/misc3d.h, board3d/inc3d.h: use the